# CreditMaze

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  SETUP.md  baseline.py  conftest.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  sanity_check.py  server.py
credit_extraction/: __init__.py  grpo_extractor.py  hook.py  istar_extractor.py  ppo_extractor.py
environment/: __init__.py  env.py  metrics.py  models.py  reward.py
environment/causal/: __init__.py  causal_graph.py  counterfactual.py
environment/generation/: __init__.py  template_engine.py
scripts/: validate-submission.sh
server/: __init__.py  app.py
tests/: test_env.py
